@@ -1,4 +1,4 @@
-/*	$NetBSD: bozohttpd.h,v 1.65 2020/10/15 04:21:53 mrg Exp $	*/
+/*	$NetBSD: bozohttpd.h,v 1.66 2021/02/11 09:23:55 mrg Exp $	*/
 
 /*	$eterna: bozohttpd.h,v 1.39 2011/11/18 09:21:15 mrg Exp $	*/
 
@@ -159,7 +159,8 @@ typedef struct bozo_httpreq_t {
 	const char *hr_methodstr;
 	char	*hr_virthostname;	/* server name (if not identical
 					   to hr_httpd->virthostname) */
-	char	*hr_file;
+	char	*hr_file_free;	/* pointer to file buffer to free() */
+	char	*hr_file;	/* pointer into file buffer */
 	char	*hr_oldfile;	/* if we added an index_html */
 	char	*hr_query;
 	char	*hr_host;	/* HTTP/1.1 Host: or virtual hostname,
